# dinky-calendar

./: pyproject.toml
dinky_calendar/: __init__.py
